--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">App_BotonPanico</string>
+    <string name="app_nick_name">Botón de pánico</string>
 </resources>
