feature-Se agregaron pantallas nuevas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">App_BotonPanico</string>
     <string name="app_nick_name">Botón de pánico</string>
-    <string name="btn_sing_in">Iniciar sesión</string>
+    <string name="btn_sign_in">Iniciar sesión</string>
+    <string name="btn_log_in">Registrarse</string>
 </resources>
