--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="app_nick_name">Botón de pánico</string>
     <string name="btn_sign_in">Iniciar sesión</string>
     <string name="btn_log_in">Registrarse</string>
+    <string name="message_code">Espere al envío del código</string>
 </resources>
