feature-Interfaces Mejora y creacion de interfaces

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,10 @@
     <string name="app_nick_name">Botón de pánico</string>
     <string name="btn_sign_in">Iniciar sesión</string>
     <string name="btn_log_in">Registrarse</string>
+    <string name="btn_send_code">Enviar código</string>
+    <string name="btn_reset_password">Restablecer contraseña</string>
     <string name="message_code">Espere al envío del código</string>
+    <string name="message_post_code">Envíe el codigo de recuperación</string>
+    <string name="message_log_in_quest">¿No tienes cuenta?</string>
+    <string name="input_text_password">Contraseña</string>
 </resources>
