--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="message_log_in_quest">¿No tienes cuenta?</string>
     <string name="input_text_password">Contraseña</string>
     <string name="option_map">Mapa</string>
+    <string name="log_out">Cerrar sesion</string>
     <string name="option_contacts">Contactos</string>
     <string name="option_panicbuttom">Botón de pánico</string>
 </resources>
