--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,16 +1,17 @@
 <resources>
     <string name="app_name">App_BotonPanicoV1</string>
     <string name="app_nick_name">Botón de pánico</string>
-    <string name="btn_sign_in">Iniciar sesión</string>
+    <string name="btn_sign_in">Siguiente</string>
     <string name="btn_log_in">Registrarse</string>
     <string name="btn_send_code">Enviar código</string>
     <string name="btn_reset_password">Restablecer contraseña</string>
     <string name="message_code">Espere al envío del código</string>
-    <string name="message_post_code">Envíe el codigo de recuperación</string>
-    <string name="message_log_in_quest">¿No tienes cuenta?</string>
+    <string name="message_post_code">Enviar código de recuperación</string>
+    <string name="message_log_in_quest">¿Aún no tienes cuenta?</string>
     <string name="input_text_password">Contraseña</string>
     <string name="option_map">Mapa</string>
     <string name="log_out">Cerrar sesion</string>
+    <string name="register_btn">Registrarse</string>
     <string name="option_contacts">Contactos</string>
     <string name="option_panicbuttom">Botón de pánico</string>
     <!-- Strings used for fragments for navigation -->
