--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="function_btnpanika">El botón tiene la función de enviar su ubicación en tiempo real durante una hora, donde cada cinco minutos se envía a través de correo electrónico a los contactos de confianza registrados.</string>
 
     <string name="verificar">Verificar código</string>
+    <string name="accessibility_service_description">Panika SOS PRueb</string>
+
 </resources>
